fixed some spacing

--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ body {
     font-family: "moon";
     font-size: 16px;
     color: white;
+    margin-bottom: 20px;
 }
 
 .logo {
@@ -51,7 +52,7 @@ body {
 }
 
 .link.container {
-    margin: 20px 0px 20px 0;
+    margin: 0 0 20px 0;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
